Fix product card image overlapping

--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-    height: 65%;
+    height: 50%;
     overflow: hidden;
  }
  
